--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 
 
 
-  <script type="text/module" src="./src/index.js"></script>
+  <script type="module" src="./src/index.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
