--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark"><a class="navbar-brand" href="#">&nbsp; <img
-                src="assets/wheel.png" width="40" height="40" alt=""> </a><button class="navbar-toggler" type="button"
-            data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark"><a class="navbar-brand"
+            href="https://thederflinger.com/">&nbsp; <img src="assets/wheel.png" width="40" height="40" alt="">
+        </a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active"><a class="nav-link px-5" href="#">Resume</a></li>
