--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark"><a class="navbar-brand"
-            href="https://thederflinger.com/">&nbsp; <img src="assets/wheel.png" width="40" height="40" alt="">
-        </a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
-                class="navbar-toggler-icon"></span></button>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark"><a class="navbar-brand" href="#">&nbsp; <img
+                src="assets/wheel.png" width="40" height="40" alt=""> </a><button class="navbar-toggler" type="button"
+            data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active"><a class="nav-link px-5" href="#">Resume</a></li>
@@ -224,7 +223,24 @@
         <div class="bubble bubble--12"></div>
         <div id="octocat"></div>
         <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand"
-                href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Technologies Used To Make This Webpage</a></nav>
+                href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Technologies Used To Make This Webpage</a>
+            <div class="columnB"><a href="https://en.wikipedia.org/wiki/HTML" target="_blank"
+                    rel="noopener noreferrer"><button class="btn btn-default"><img src="assets/html.png"
+                            width="50px" /></button></a></div>
+            <div class="columnB"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank"
+                    rel="noopener noreferrer"><button class="btn btn-default"><img src="assets/css.png"
+                            width="50px" /></button></a></div>
+            <div class="columnB"><a href="https://reactjs.org/" target="_blank" rel="noopener noreferrer"><button
+                        class="btn btn-default"><img src="assets/logo192.png" width="50px" /></button></a></div>
+            <div class="columnB"><a href="https://getbootstrap.com/" target="_blank" rel="noopener noreferrer"><button
+                        class="btn btn-default"><img src="assets/bootstrap.png" width="50px" /></button></a></div>
+            <div class="columnB"><a href="https://babeljs.io/" target="_blank" rel="noopener noreferrer"><button
+                        class="btn btn-default"><img src="assets/babel.png" width="50px" /></button></a></div>
+            <div class="columnB"><a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer"><button
+                        class="btn btn-default"><img src="assets/pages.png" width="50px" /></button></a></div>
+            <div class="columnB"><a href="https://webpack.js.org/" target="_blank" rel="noopener noreferrer"><button
+                        class="btn btn-default"><img src="assets/webpack.png" width="50px" /></button></a></div>
+        </nav>
     </div>
 </body>
 
